@@ -9,6 +9,7 @@ package org.epics.archiverappliance.retrieval.client;
 
 import edu.stanford.slac.archiverappliance.plain.PlainCommonSetup;
 import edu.stanford.slac.archiverappliance.plain.PlainStoragePlugin;
+import edu.stanford.slac.archiverappliance.plain.PlainStorageType;
 import org.apache.commons.io.FileUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -54,16 +55,22 @@ import java.util.stream.Stream;
  */
 class MissingDataYearSpanRetrievalUnitTest {
     static final String testSpecificFolder = "MissingDataYearSpanRetrievalUnit";
-    static final String pvNamePB = ConfigServiceForTests.ARCH_UNIT_TEST_PVNAME_PREFIX + ":" + testSpecificFolder;
+    static final String pvNamePB =
+            ConfigServiceForTests.ARCH_UNIT_TEST_PVNAME_PREFIX + PlainStorageType.PB + ":" + testSpecificFolder;
+    static final String pvNameParquet =
+            ConfigServiceForTests.ARCH_UNIT_TEST_PVNAME_PREFIX + PlainStorageType.PARQUET + ":" + testSpecificFolder;
     private static final Logger logger = LogManager.getLogger(MissingDataYearSpanRetrievalUnitTest.class.getName());
     private static final LinkedList<Instant> generatedTimeStamps = new LinkedList<Instant>();
     static File dataFolder = new File(ConfigServiceForTests.getDefaultPBTestFolder() + File.separator + "ArchUnitTest"
             + File.separator + testSpecificFolder);
     static PlainCommonSetup PBSetup = new PlainCommonSetup();
-    static PlainStoragePlugin pbPlugin = new PlainStoragePlugin();
+    static PlainCommonSetup parquetSetup = new PlainCommonSetup();
+    static PlainStoragePlugin pbPlugin = new PlainStoragePlugin(PlainStorageType.PB);
+    static PlainStoragePlugin parquetPlugin = new PlainStoragePlugin(PlainStorageType.PARQUET);
 
     static Stream<Arguments> provideMissingDataYearSpan() {
-        return Stream.of(List.of(pvNamePB, pbPlugin)).flatMap(p -> getArgumentsStream(p.getFirst(), p.get(1)));
+        return Stream.of(List.of(pvNameParquet, parquetPlugin), List.of(pvNamePB, pbPlugin))
+                .flatMap(p -> getArgumentsStream(p.get(0), p.get(1)));
     }
 
     /**
@@ -140,6 +147,7 @@ class MissingDataYearSpanRetrievalUnitTest {
     @BeforeAll
     public static void setUp() throws Exception {
         PBSetup.setUpRootFolder(pbPlugin);
+        parquetSetup.setUpRootFolder(parquetPlugin);
         logger.info("Data folder is " + dataFolder.getAbsolutePath());
         FileUtils.deleteDirectory(dataFolder);
         generateData();
@@ -166,16 +174,22 @@ class MissingDataYearSpanRetrievalUnitTest {
     private static void generateData(short year, int jun201201secsIntoYear) throws IOException {
         ArrayListEventStream strmPB = new ArrayListEventStream(
                 0, new RemotableEventStreamDesc(ArchDBRTypes.DBR_SCALAR_DOUBLE, pvNamePB, year));
+        ArrayListEventStream strmParquet = new ArrayListEventStream(
+                0, new RemotableEventStreamDesc(ArchDBRTypes.DBR_SCALAR_DOUBLE, pvNameParquet, year));
         for (int day = 0; day < 30; day++) {
             YearSecondTimestamp yts = new YearSecondTimestamp(
                     year,
                     jun201201secsIntoYear + day * PartitionGranularity.PARTITION_DAY.getApproxSecondsPerChunk(),
                     111000000);
             strmPB.add(new SimulationEvent(yts, ArchDBRTypes.DBR_SCALAR_DOUBLE, new ScalarValue<Double>(0.0)));
+            strmParquet.add(new SimulationEvent(yts, ArchDBRTypes.DBR_SCALAR_DOUBLE, new ScalarValue<Double>(0.0)));
             generatedTimeStamps.add(TimeUtils.convertFromYearSecondTimestamp(yts));
         }
         try (BasicContext context = new BasicContext()) {
             pbPlugin.appendData(context, pvNamePB, strmPB);
+        }
+        try (BasicContext context = new BasicContext()) {
+            parquetPlugin.appendData(context, pvNameParquet, strmParquet);
         }
     }
 
